@@ -1757,3 +1757,332 @@
 (cl-define-keysym #x1002247 "notapproxeq") ;U+2247 NOT ALMOST EQUAL TO
 (cl-define-keysym #x1002262 "notidentical") ;U+2262 NOT IDENTICAL TO
 (cl-define-keysym #x1002263 "stricteq")	;U+2263 STRICTLY EQUIVALENT TO
+
+;; A bunch of extended keysyms
+
+(cl-define-keysym #x100000A8 "hpmute_acute")
+(cl-define-keysym #x100000A9 "hpmute_grave")
+(cl-define-keysym #x100000AA "hpmute_asciicircum")
+(cl-define-keysym #x100000AB "hpmute_diaeresis")
+(cl-define-keysym #x100000AC "hpmute_asciitilde")
+(cl-define-keysym #x100000AF "hplira")
+(cl-define-keysym #x100000BE "hpguilder")
+(cl-define-keysym #x100000EE "hpYdiaeresis")
+(cl-define-keysym #x100000EE "hpIO")
+(cl-define-keysym #x100000F6 "hplongminus")
+(cl-define-keysym #x100000FC "hpblock")
+(cl-define-keysym #x1000FF00 "apLineDel")
+(cl-define-keysym #x1000FF01 "apCharDel")
+(cl-define-keysym #x1000FF02 "apCopy")
+(cl-define-keysym #x1000FF03 "apCut")
+(cl-define-keysym #x1000FF04 "apPaste")
+(cl-define-keysym #x1000FF05 "apMove")
+(cl-define-keysym #x1000FF06 "apGrow")
+(cl-define-keysym #x1000FF07 "apCmd")
+(cl-define-keysym #x1000FF08 "apShell")
+(cl-define-keysym #x1000FF09 "apLeftBar")
+(cl-define-keysym #x1000FF0A "apRightBar")
+(cl-define-keysym #x1000FF0B "apLeftBox")
+(cl-define-keysym #x1000FF0C "apRightBox")
+(cl-define-keysym #x1000FF0D "apUpBox")
+(cl-define-keysym #x1000FF0E "apDownBox")
+(cl-define-keysym #x1000FF0F "apPop")
+(cl-define-keysym #x1000FF10 "apRead")
+(cl-define-keysym #x1000FF11 "apEdit")
+(cl-define-keysym #x1000FF12 "apSave")
+(cl-define-keysym #x1000FF13 "apExit")
+(cl-define-keysym #x1000FF14 "apRepeat")
+(cl-define-keysym #x1000FF48 "hpModelock1")
+(cl-define-keysym #x1000FF49 "hpModelock2")
+(cl-define-keysym #x1000FF6C "hpReset")
+(cl-define-keysym #x1000FF6D "hpSystem")
+(cl-define-keysym #x1000FF6E "hpUser")
+(cl-define-keysym #x1000FF6F "hpClearLine")
+(cl-define-keysym #x1000FF70 "hpInsertLine")
+(cl-define-keysym #x1000FF71 "hpDeleteLine")
+(cl-define-keysym #x1000FF72 "hpInsertChar")
+(cl-define-keysym #x1000FF73 "hpDeleteChar")
+(cl-define-keysym #x1000FF74 "hpBackTab")
+(cl-define-keysym #x1000FF75 "hpKP_BackTab")
+(cl-define-keysym #x1000FFA8 "apKP_parenleft")
+(cl-define-keysym #x1000FFA9 "apKP_parenright")
+(cl-define-keysym #x10004001 "I2ND_FUNC_L")
+(cl-define-keysym #x10004002 "I2ND_FUNC_R")
+(cl-define-keysym #x10004003 "IREMOVE")
+(cl-define-keysym #x10004004 "IREPEAT")
+(cl-define-keysym #x10004101 "IA1")
+(cl-define-keysym #x10004102 "IA2")
+(cl-define-keysym #x10004103 "IA3")
+(cl-define-keysym #x10004104 "IA4")
+(cl-define-keysym #x10004105 "IA5")
+(cl-define-keysym #x10004106 "IA6")
+(cl-define-keysym #x10004107 "IA7")
+(cl-define-keysym #x10004108 "IA8")
+(cl-define-keysym #x10004109 "IA9")
+(cl-define-keysym #x1000410A "IA10")
+(cl-define-keysym #x1000410B "IA11")
+(cl-define-keysym #x1000410C "IA12")
+(cl-define-keysym #x1000410D "IA13")
+(cl-define-keysym #x1000410E "IA14")
+(cl-define-keysym #x1000410F "IA15")
+(cl-define-keysym #x10004201 "IB1")
+(cl-define-keysym #x10004202 "IB2")
+(cl-define-keysym #x10004203 "IB3")
+(cl-define-keysym #x10004204 "IB4")
+(cl-define-keysym #x10004205 "IB5")
+(cl-define-keysym #x10004206 "IB6")
+(cl-define-keysym #x10004207 "IB7")
+(cl-define-keysym #x10004208 "IB8")
+(cl-define-keysym #x10004209 "IB9")
+(cl-define-keysym #x1000420A "IB10")
+(cl-define-keysym #x1000420B "IB11")
+(cl-define-keysym #x1000420C "IB12")
+(cl-define-keysym #x1000420D "IB13")
+(cl-define-keysym #x1000420E "IB14")
+(cl-define-keysym #x1000420F "IB15")
+(cl-define-keysym #x10004210 "IB16")
+(cl-define-keysym #x1000FF00 "DRemove")
+(cl-define-keysym #x1000FEB0 "Dring_accent")
+(cl-define-keysym #x1000FE5E "Dcircumflex_accent")
+(cl-define-keysym #x1000FE2C "Dcedilla_accent")
+(cl-define-keysym #x1000FE27 "Dacute_accent")
+(cl-define-keysym #x1000FE60 "Dgrave_accent")
+(cl-define-keysym #x1000FE7E "Dtilde")
+(cl-define-keysym #x1000FE22 "Ddiaeresis")
+(cl-define-keysym #x1004FF02 "osfCopy")
+(cl-define-keysym #x1004FF03 "osfCut")
+(cl-define-keysym #x1004FF04 "osfPaste")
+(cl-define-keysym #x1004FF07 "osfBackTab")
+(cl-define-keysym #x1004FF08 "osfBackSpace")
+(cl-define-keysym #x1004FF0B "osfClear")
+(cl-define-keysym #x1004FF1B "osfEscape")
+(cl-define-keysym #x1004FF31 "osfAddMode")
+(cl-define-keysym #x1004FF32 "osfPrimaryPaste")
+(cl-define-keysym #x1004FF33 "osfQuickPaste")
+(cl-define-keysym #x1004FF40 "osfPageLeft")
+(cl-define-keysym #x1004FF41 "osfPageUp")
+(cl-define-keysym #x1004FF42 "osfPageDown")
+(cl-define-keysym #x1004FF43 "osfPageRight")
+(cl-define-keysym #x1004FF44 "osfActivate")
+(cl-define-keysym #x1004FF45 "osfMenuBar")
+(cl-define-keysym #x1004FF51 "osfLeft")
+(cl-define-keysym #x1004FF52 "osfUp")
+(cl-define-keysym #x1004FF53 "osfRight")
+(cl-define-keysym #x1004FF54 "osfDown")
+(cl-define-keysym #x1004FF55 "osfPrior")
+(cl-define-keysym #x1004FF56 "osfNext")
+(cl-define-keysym #x1004FF57 "osfEndLine")
+(cl-define-keysym #x1004FF58 "osfBeginLine")
+(cl-define-keysym #x1004FF59 "osfEndData")
+(cl-define-keysym #x1004FF5A "osfBeginData")
+(cl-define-keysym #x1004FF5B "osfPrevMenu")
+(cl-define-keysym #x1004FF5C "osfNextMenu")
+(cl-define-keysym #x1004FF5D "osfPrevField")
+(cl-define-keysym #x1004FF5E "osfNextField")
+(cl-define-keysym #x1004FF60 "osfSelect")
+(cl-define-keysym #x1004FF63 "osfInsert")
+(cl-define-keysym #x1004FF65 "osfUndo")
+(cl-define-keysym #x1004FF67 "osfMenu")
+(cl-define-keysym #x1004FF69 "osfCancel")
+(cl-define-keysym #x1004FF6A "osfHelp")
+(cl-define-keysym #x1004FF71 "osfSelectAll")
+(cl-define-keysym #x1004FF72 "osfDeselectAll")
+(cl-define-keysym #x1004FF73 "osfReselect")
+(cl-define-keysym #x1004FF74 "osfExtend")
+(cl-define-keysym #x1004FF78 "osfRestore")
+(cl-define-keysym #x1004FF7E "osfSwitchDirection")
+(cl-define-keysym #x1004FFF5 "osfPriorMinor")
+(cl-define-keysym #x1004FFF6 "osfNextMinor")
+(cl-define-keysym #x1004FFF7 "osfRightLine")
+(cl-define-keysym #x1004FFF8 "osfLeftLine")
+(cl-define-keysym #x1004FFFF "osfDelete")
+(cl-define-keysym #x1005FF00 "SunFA_Grave")
+(cl-define-keysym #x1005FF01 "SunFA_Circum")
+(cl-define-keysym #x1005FF02 "SunFA_Tilde")
+(cl-define-keysym #x1005FF03 "SunFA_Acute")
+(cl-define-keysym #x1005FF04 "SunFA_Diaeresis")
+(cl-define-keysym #x1005FF05 "SunFA_Cedilla")
+(cl-define-keysym #x1005FF10 "SunF36")
+(cl-define-keysym #x1005FF11 "SunF37")
+(cl-define-keysym #x1005FF60 "SunSys_Req")
+(cl-define-keysym #x1005FF70 "SunProps")
+(cl-define-keysym #x1005FF71 "SunFront")
+(cl-define-keysym #x1005FF72 "SunCopy")
+(cl-define-keysym #x1005FF73 "SunOpen")
+(cl-define-keysym #x1005FF74 "SunPaste")
+(cl-define-keysym #x1005FF75 "SunCut")
+(cl-define-keysym #x1005FF76 "SunPowerSwitch")
+(cl-define-keysym #x1005FF77 "SunAudioLowerVolume")
+(cl-define-keysym #x1005FF78 "SunAudioMute")
+(cl-define-keysym #x1005FF79 "SunAudioRaiseVolume")
+(cl-define-keysym #x1005FF7A "SunVideoDegauss")
+(cl-define-keysym #x1005FF7B "SunVideoLowerBrightness")
+(cl-define-keysym #x1005FF7C "SunVideoRaiseBrightness")
+(cl-define-keysym #x1005FF7D "SunPowerSwitchShift")
+(cl-define-keysym #xFF20 "SunCompose")
+(cl-define-keysym #xFF55 "SunPageUp")
+(cl-define-keysym #xFF56 "SunPageDown")
+(cl-define-keysym #xFF61 "SunPrint_Screen")
+(cl-define-keysym #xFF65 "SunUndo")
+(cl-define-keysym #xFF66 "SunAgain")
+(cl-define-keysym #xFF68 "SunFind")
+(cl-define-keysym #xFF69 "SunStop")
+(cl-define-keysym #xFF7E "SunAltGraph")
+(cl-define-keysym #x1006FF00 "WYSetup")
+(cl-define-keysym #x1006FF00 "ncdSetup")
+(cl-define-keysym #x10070001 "XeroxPointerButton1")
+(cl-define-keysym #x10070002 "XeroxPointerButton2")
+(cl-define-keysym #x10070003 "XeroxPointerButton3")
+(cl-define-keysym #x10070004 "XeroxPointerButton4")
+(cl-define-keysym #x10070005 "XeroxPointerButton5")
+(cl-define-keysym #x1008FF01 "XF86ModeLock")
+(cl-define-keysym #x1008FF10 "XF86Standby")
+(cl-define-keysym #x1008FF11 "XF86AudioLowerVolume")
+(cl-define-keysym #x1008FF12 "XF86AudioMute")
+(cl-define-keysym #x1008FF13 "XF86AudioRaiseVolume")
+(cl-define-keysym #x1008FF14 "XF86AudioPlay")
+(cl-define-keysym #x1008FF15 "XF86AudioStop")
+(cl-define-keysym #x1008FF16 "XF86AudioPrev")
+(cl-define-keysym #x1008FF17 "XF86AudioNext")
+(cl-define-keysym #x1008FF18 "XF86HomePage")
+(cl-define-keysym #x1008FF19 "XF86Mail")
+(cl-define-keysym #x1008FF1A "XF86Start")
+(cl-define-keysym #x1008FF1B "XF86Search")
+(cl-define-keysym #x1008FF1C "XF86AudioRecord")
+(cl-define-keysym #x1008FF1D "XF86Calculator")
+(cl-define-keysym #x1008FF1E "XF86Memo")
+(cl-define-keysym #x1008FF1F "XF86ToDoList")
+(cl-define-keysym #x1008FF20 "XF86Calendar")
+(cl-define-keysym #x1008FF21 "XF86PowerDown")
+(cl-define-keysym #x1008FF22 "XF86ContrastAdjust")
+(cl-define-keysym #x1008FF23 "XF86RockerUp")
+(cl-define-keysym #x1008FF24 "XF86RockerDown")
+(cl-define-keysym #x1008FF25 "XF86RockerEnter")
+(cl-define-keysym #x1008FF26 "XF86Back")
+(cl-define-keysym #x1008FF27 "XF86Forward")
+(cl-define-keysym #x1008FF28 "XF86Stop")
+(cl-define-keysym #x1008FF29 "XF86Refresh")
+(cl-define-keysym #x1008FF2A "XF86PowerOff")
+(cl-define-keysym #x1008FF2B "XF86WakeUp")
+(cl-define-keysym #x1008FF2C "XF86Eject")
+(cl-define-keysym #x1008FF2D "XF86ScreenSaver")
+(cl-define-keysym #x1008FF2E "XF86WWW")
+(cl-define-keysym #x1008FF2F "XF86Sleep")
+(cl-define-keysym #x1008FF30 "XF86Favorites")
+(cl-define-keysym #x1008FF31 "XF86AudioPause")
+(cl-define-keysym #x1008FF32 "XF86AudioMedia")
+(cl-define-keysym #x1008FF33 "XF86MyComputer")
+(cl-define-keysym #x1008FF34 "XF86VendorHome")
+(cl-define-keysym #x1008FF35 "XF86LightBulb")
+(cl-define-keysym #x1008FF36 "XF86Shop")
+(cl-define-keysym #x1008FF37 "XF86History")
+(cl-define-keysym #x1008FF38 "XF86OpenURL")
+(cl-define-keysym #x1008FF39 "XF86AddFavorite")
+(cl-define-keysym #x1008FF3A "XF86HotLinks")
+(cl-define-keysym #x1008FF3B "XF86BrightnessAdjust")
+(cl-define-keysym #x1008FF3C "XF86Finance")
+(cl-define-keysym #x1008FF3D "XF86Community")
+(cl-define-keysym #x1008FF3E "XF86AudioRewind")
+(cl-define-keysym #x1008FF3F "XF86BackForward")
+(cl-define-keysym #x1008FF40 "XF86Launch0")
+(cl-define-keysym #x1008FF41 "XF86Launch1")
+(cl-define-keysym #x1008FF42 "XF86Launch2")
+(cl-define-keysym #x1008FF43 "XF86Launch3")
+(cl-define-keysym #x1008FF44 "XF86Launch4")
+(cl-define-keysym #x1008FF45 "XF86Launch5")
+(cl-define-keysym #x1008FF46 "XF86Launch6")
+(cl-define-keysym #x1008FF47 "XF86Launch7")
+(cl-define-keysym #x1008FF48 "XF86Launch8")
+(cl-define-keysym #x1008FF49 "XF86Launch9")
+(cl-define-keysym #x1008FF4A "XF86LaunchA")
+(cl-define-keysym #x1008FF4B "XF86LaunchB")
+(cl-define-keysym #x1008FF4C "XF86LaunchC")
+(cl-define-keysym #x1008FF4D "XF86LaunchD")
+(cl-define-keysym #x1008FF4E "XF86LaunchE")
+(cl-define-keysym #x1008FF4F "XF86LaunchF")
+(cl-define-keysym #x1008FF50 "XF86ApplicationLeft")
+(cl-define-keysym #x1008FF51 "XF86ApplicationRight")
+(cl-define-keysym #x1008FF52 "XF86Book")
+(cl-define-keysym #x1008FF53 "XF86CD")
+(cl-define-keysym #x1008FF54 "XF86Calculater")
+(cl-define-keysym #x1008FF55 "XF86Clear")
+(cl-define-keysym #x1008FF56 "XF86Close")
+(cl-define-keysym #x1008FF57 "XF86Copy")
+(cl-define-keysym #x1008FF58 "XF86Cut")
+(cl-define-keysym #x1008FF59 "XF86Display")
+(cl-define-keysym #x1008FF5A "XF86DOS")
+(cl-define-keysym #x1008FF5B "XF86Documents")
+(cl-define-keysym #x1008FF5C "XF86Excel")
+(cl-define-keysym #x1008FF5D "XF86Explorer")
+(cl-define-keysym #x1008FF5E "XF86Game")
+(cl-define-keysym #x1008FF5F "XF86Go")
+(cl-define-keysym #x1008FF60 "XF86iTouch")
+(cl-define-keysym #x1008FF61 "XF86LogOff")
+(cl-define-keysym #x1008FF62 "XF86Market")
+(cl-define-keysym #x1008FF63 "XF86Meeting")
+(cl-define-keysym #x1008FF65 "XF86MenuKB")
+(cl-define-keysym #x1008FF66 "XF86MenuPB")
+(cl-define-keysym #x1008FF67 "XF86MySites")
+(cl-define-keysym #x1008FF68 "XF86New")
+(cl-define-keysym #x1008FF69 "XF86News")
+(cl-define-keysym #x1008FF6A "XF86OfficeHome")
+(cl-define-keysym #x1008FF6B "XF86Open")
+(cl-define-keysym #x1008FF6C "XF86Option")
+(cl-define-keysym #x1008FF6D "XF86Paste")
+(cl-define-keysym #x1008FF6E "XF86Phone")
+(cl-define-keysym #x1008FF70 "XF86Q")
+(cl-define-keysym #x1008FF72 "XF86Reply")
+(cl-define-keysym #x1008FF73 "XF86Reload")
+(cl-define-keysym #x1008FF74 "XF86RotateWindows")
+(cl-define-keysym #x1008FF75 "XF86RotationPB")
+(cl-define-keysym #x1008FF76 "XF86RotationKB")
+(cl-define-keysym #x1008FF77 "XF86Save")
+(cl-define-keysym #x1008FF78 "XF86ScrollUp")
+(cl-define-keysym #x1008FF79 "XF86ScrollDown")
+(cl-define-keysym #x1008FF7A "XF86ScrollClick")
+(cl-define-keysym #x1008FF7B "XF86Send")
+(cl-define-keysym #x1008FF7C "XF86Spell")
+(cl-define-keysym #x1008FF7D "XF86SplitScreen")
+(cl-define-keysym #x1008FF7E "XF86Support")
+(cl-define-keysym #x1008FF7F "XF86TaskPane")
+(cl-define-keysym #x1008FF80 "XF86Terminal")
+(cl-define-keysym #x1008FF81 "XF86Tools")
+(cl-define-keysym #x1008FF82 "XF86Travel")
+(cl-define-keysym #x1008FF84 "XF86UserPB")
+(cl-define-keysym #x1008FF85 "XF86User1KB")
+(cl-define-keysym #x1008FF86 "XF86User2KB")
+(cl-define-keysym #x1008FF87 "XF86Video")
+(cl-define-keysym #x1008FF88 "XF86WheelButton")
+(cl-define-keysym #x1008FF89 "XF86Word")
+(cl-define-keysym #x1008FF8A "XF86Xfer")
+(cl-define-keysym #x1008FF8B "XF86ZoomIn")
+(cl-define-keysym #x1008FF8C "XF86ZoomOut")
+(cl-define-keysym #x1008FF8D "XF86Away")
+(cl-define-keysym #x1008FF8E "XF86Messenger")
+(cl-define-keysym #x1008FF8F "XF86WebCam")
+(cl-define-keysym #x1008FF90 "XF86MailForward")
+(cl-define-keysym #x1008FF91 "XF86Pictures")
+(cl-define-keysym #x1008FF92 "XF86Music")
+(cl-define-keysym #x1008FE01 "XF86_Switch_VT_1")
+(cl-define-keysym #x1008FE02 "XF86_Switch_VT_2")
+(cl-define-keysym #x1008FE03 "XF86_Switch_VT_3")
+(cl-define-keysym #x1008FE04 "XF86_Switch_VT_4")
+(cl-define-keysym #x1008FE05 "XF86_Switch_VT_5")
+(cl-define-keysym #x1008FE06 "XF86_Switch_VT_6")
+(cl-define-keysym #x1008FE07 "XF86_Switch_VT_7")
+(cl-define-keysym #x1008FE08 "XF86_Switch_VT_8")
+(cl-define-keysym #x1008FE09 "XF86_Switch_VT_9")
+(cl-define-keysym #x1008FE0A "XF86_Switch_VT_10")
+(cl-define-keysym #x1008FE0B "XF86_Switch_VT_11")
+(cl-define-keysym #x1008FE0C "XF86_Switch_VT_12")
+(cl-define-keysym #x1008FE20 "XF86_Ungrab")
+(cl-define-keysym #x1008FE21 "XF86_ClearGrab")
+(cl-define-keysym #x1008FE22 "XF86_Next_VMode")
+(cl-define-keysym #x1008FE23 "XF86_Prev_VMode")
+(cl-define-keysym #x100000A8 "usldead_acute")
+(cl-define-keysym #x100000A9 "usldead_grave")
+(cl-define-keysym #x100000AB "usldead_diaeresis")
+(cl-define-keysym #x100000AA "usldead_asciicircum")
+(cl-define-keysym #x100000AC "usldead_asciitilde")
+(cl-define-keysym #x1000FE2C "usldead_cedilla")
+(cl-define-keysym #x1000FEB0 "usldead_ring")
